# medhelper

./: .env.example  .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
medhelper/: db.sqlite3  manage.py
medhelper/accounting/: models.py  serializers.py  views.py
medhelper/accounting/migrations/: 0001_initial.py
medhelper/consultations/: models.py  permissions.py  serializers.py  urls.py  views.py
medhelper/consultations/migrations/: 0001_initial.py
medhelper/consultations/tests/: test_consultations.py
medhelper/medhelper/: asgi.py  settings.py  urls.py  wsgi.py
